--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,7 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }vercel login
+{
+  "version": 2,
+
+  "builds": [{ "src": "./dialogflow.js", "use": "@vercel/node" }],
+
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
+}
